--- a/Chamber/styles/medium.css
+++ b/Chamber/styles/medium.css
@@ -19,7 +19,8 @@
     
 main {
         display: grid;
-        grid-template-rows: 5fr;
+        grid-template-rows: 4fr;
+        grid-template-columns: auto auto;
         
     }
 
@@ -31,22 +32,25 @@ main {
     .news{
         grid-column: 1/3;
         grid-row: 2;
+        padding-bottom: 10%;
     }
 
     .join {
         display: block;
-        grid-column: 1/3;
-        grid-row: 4;
+        grid-column: 2;
+        grid-row: 2/3;;
+        padding-top: 10%;
     }
 
     .event {
-        grid-column: 1;
-        grid-row: 5;
+        grid-column: 2;
+        grid-row: 2/3;
+        padding-top: 30%;
         
     }
 
     .weather {
         grid-column: 2;
-        grid-row: 5;
+        grid-row: 3/4;
     }
 }
